# python-client

./: README.md  pyproject.toml  setup.py
.github/workflows/: release_workflow.yml
example_data/: home_sensor_log.jsonl
examples/: files_api.py  image_summarization.py  kafka_consumer.py  kafka_producer.py  lens_clone.py  lens_csv_stream.py  lens_image_qa.py  lens_kafka_io.py  lens_machine_state.py  lens_modify_config.py  lens_modify_session.py  lens_register.py  lens_rtsp_camera.py  lens_sensor_logs.py  lens_sensor_logs_rest.py  lens_status.py  lens_video_stream.py  messaging_api.py  quickstart.py  sensor_messaging.py  sensor_pubsub.py  sensor_streaming.py  sensor_subscriber.py  test_camera.py  tutorial01.py  tutorial02.py  video_description.py
src/: requirements.txt  setup.py
src/archetypeai/: __init__.py  _base.py  _capabilities.py  _data_processing.py  _files.py  _kafka_client.py  _lens.py  _messaging.py  _sensors.py  _socket_manager.py  _sse.py  api_client.py  common.py  sensor_client.py  utils.py
tests/: client_test.py  files_test.py  utils_test.py
